完善添加单测代码
